# mne-nodes

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: copilot-instructions.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: automerge_precommit  docs.yml  pypi_release.yml  run_tests.yml
_sources/documentation/: settings.rst.txt
_static/: documentation_options.js  versions.json
api/: index.html  parameter_widgets.html
development/: index.html
docs/source/: conf.py  index.rst
docs/source/api/: index.rst  parameter_widgets.rst
docs/source/documentation/: custom_modules.rst  functions.rst  parameters.rst  settings.rst
documentation/: custom_modules.html  functions.html  index.html  settings.html
install/: index.html
mne-nodes/: __init__.py  __main__.py
mne-nodes/basic_functions/: basic_operations.py  basic_plot.py
mne-nodes/development/: dev_utils.py  transfer_custom_function_config.py
mne-nodes/gui/: dialogs.py  education_widgets.py  function_widgets.py  gui_utils.py  loading_widgets.py  models.py  tools.py  welcome_window.py
mne-nodes/gui/node/: node_scene.py  node_viewer.py  nodes.py  pipes.py
mne-nodes/pipeline/: __init__.py  controller.py  function_utils.py  parallel.py  pipeline_utils.py  plot_utils.py
mne-nodes/tests/: test_app.py  test_base_widgets.py  test_concurrent.py  test_main_window.py  test_parameter_widgets.py
mne_nodes/: __init__.py  __main__.py  conftest.py  qt_compat.py
mne_nodes/basic_functions/: basic_operations.py  basic_operations_config.json  basic_plot.py  basic_plot_config.json
mne_nodes/basic_operations/: __init__.py  basic_operations.py  basic_operations_config.json
mne_nodes/basic_plot/: basic_plot.py  basic_plot_config.json
mne_nodes/core_functions/: core_functions.py  core_functions_config.json
mne_nodes/development/: animations.py  base_widget_tester.py  console_widget_speed.py  dev_utils.py  development_considerations.md  generate_mne_config.py  mne_config.json  param_tester.py  run_function_Importer.py  run_interaction_widgets.py  run_tree_widget.py  transfer_custom_function_config.py
mne_nodes/extra/: functions.csv  license.txt  parameters.csv
mne_nodes/gui/: base_widgets.py  code_editor.py  console.py  dialogs.py  education_widgets.py  function_widgets.py  gui_utils.py  loading_widgets.py  main_window.py  models.py  parameter_widgets.py  plot_widgets.py  run_widgets.py  syntax_highlight.py  tools.py  welcome_window.py
mne_nodes/gui/node/: base_node.py  input_node.py  node_defaults.py  node_palette.py  node_picker.py  node_scene.py  node_viewer.py  nodes.py  nodes_readme.md  pipes.py  ports.py
mne_nodes/mne_functions/: generate_mne_config.py  mne_functions_config.json
mne_nodes/pipeline/: code_generation.py  controller.py  data_import.py  exception_handling.py  execution.py  function_utils.py  io.py  legacy.py  loading.py  node_controller.py  pipeline_utils.py  plot_utils.py  project.py  settings.py  streams.py
mne_nodes/tests/: __init__.py  _test_process.py  _test_utils.py  test_app.py  test_base_widgets.py  test_code_editor.py  test_concurrent.py  test_console.py  test_controller.py  test_execution.py  test_function_import.py  test_functions.py  test_io.py  test_legacy.py  test_loading.py  test_main_window.py  test_mne_functions.py  test_nodepicker_drag.py  test_nodes.py  test_parameter_widgets.py  test_qsettings.py  test_settings.py  test_streams.py  test_welcome_window.py  test_worker_dialog.py
mne_nodes/tests/tiny_bids/code/: make_tiny_bids_dataset.py
