[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mne-nodes"
authors = [
    { name = "Martin G. Schulz", email = "dev@mgschulz.de" }
]
description = "A GUI with Node-Layout for data analysis with MNE-Python"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
keywords = ["mne-python", "meg", "eeg", "pipeline", "gui", "heidelberg"]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # MNE
    "mne",
    "mne-bids",
    "mne-qt-browser",
    "mne-connectivity",
    # MNE related
    "vtk", # needed for CIs
    "nibabel", # needed for CIs
    "pyvistaqt", # needed for CIs
    "autoreject",
    "h5io",
    "h5netcdf",
    # Qt
    "qtpy",
    "darkdetect",
    "qtawesome",
    "pyobjc-framework-Cocoa; sys_platform == 'Darwin'",
    # Other
    "psutil",
    "tqdm",
    "filelock",
]
dynamic = ["version"]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-qt",
    "pre-commit",
    "ruff",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
]

[project.urls]
Homepage = "https://github.com/marsipu/mne-nodes"
Repository = "https://github.com/marsipu/mne-nodes.git"

[project.scripts]
mne_nodes = "mne_nodes.__main__:main"

[tool.hatch.build]
exclude = [
    "/.*",
    "/*.yml",
]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "release-branch-semver" }

[tool.ruff]
line-length = 88
fix = true
show-fixes = true
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true

# For type checking
[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = true

[tool.docformatter]
in-place = true
recursive = true

[tool.doc8]
ignore = ["D001", "D004"]
file-encoding = "utf-8"
